--- a/docs/verkefni-5/styles/style.css
+++ b/docs/verkefni-5/styles/style.css
@@ -1,22 +1,6 @@
 html {
-  font-size: 10px;
-  font-family: 'Open Sans', sans-serif;
-}
-
-
-h1 {
-  font-size: 60px;
-  text-align: center;
-}
-
-p, li {
-  font-size: 16px;
-  line-height: 2;
-  letter-spacing: 1px;
-}
-
-
-html {
+  font-size: 1em;
+  font-family:  sans-serif;
   background-color: #00539F;
 }
 
@@ -27,12 +11,19 @@ body {
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
-
 h1 {
+  font-size: 3em;
+  text-align: center;
   margin: 0;
   padding: 20px 0;
   color: #00539F;
   text-shadow: 3px 3px 1px black;
+}
+
+p, li {
+  font-size: 16px;
+  line-height: 2;
+  letter-spacing: 1px;
 }
 
 img {
